# OxQuant

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SUMMARY.md  Dockerfile.api  Dockerfile.web  LICENSE  PHASE2_FILES.md  README.md  README_PHASE2.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup_github.sh  start.sh  verify_project.py
deployment/postgres/: init.sql
src/api/: main.py
src/api/routers/: auth.py  strategies.py
src/api/schemas/: auth.py  strategies.py
src/api/utils/: auth.py
src/core/: backtesting.py  config.py  database.py  engine.py  models.py
src/strategies/: examples.py
