[tool.poetry]
name = "oxquant"
version = "0.1.0"
description = "Next-generation AI quantitative trading platform"
authors = ["candy-frankie <644743502@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
pandas = "^2.1.0"
numpy = "^1.26.0"
polars = "^0.20.0"
dask = "^2023.12.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
torch = "^2.1.0"
langchain = "^0.0.350"
openai = "^1.3.0"
ccxt = "^4.2.0"
ib-insync = "^0.9.86"
backtrader = "^1.9.78.123"
vectorbt = "^0.25.0"
quantstats = "^0.0.62"
pyfolio = "^0.9.2"
plotly = "^5.18.0"
streamlit = "^1.28.0"
jupyter = "^1.0.0"
ipython = "^8.17.0"
python-dotenv = "^1.0.0"
cryptography = "^41.0.0"
celery = "^5.3.0"
flower = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
jupyterlab = "^4.0.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]